--- a/cliente/src/componentes/js/profileMenu.css
+++ b/cliente/src/componentes/js/profileMenu.css
@@ -14,7 +14,7 @@
   background-color: white;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  width: 200px; /* Aumenta el ancho de la caja */
+  width: 200px; 
   border-radius: 8px;
   overflow: hidden;
 }
